--- a/spotweathersettings/Resources/Root.plist
+++ b/spotweathersettings/Resources/Root.plist
@@ -18,6 +18,7 @@
 			<key>PostNotification</key>
 			<string>com.thomtl.spotweathersettings/preferences.changed</string>
 		</dict>
+
 		<dict>
 			<key>cell</key>
 			<string>PSGroupCell</string>
@@ -69,6 +70,8 @@
 		<dict>
 			<key>cell</key>
 			<string>PSGroupCell</string>
+			<key>footerText</key>
+			<string>Respring to apply changes.</string>
 		</dict>
 		<dict>
             <key>cell</key>             
