--- a/spotweathersettings/Resources/Root.plist
+++ b/spotweathersettings/Resources/Root.plist
@@ -68,17 +68,77 @@
 			<string>OffsetX</string>
 		</dict>
 		<dict>
-			<key>cell</key>
-			<string>PSGroupCell</string>
-			<key>footerText</key>
-			<string>Respring to apply changes.</string>
-		</dict>
+                        <key>cell</key>
+                        <string>PSGroupCell</string>
+                </dict>
 		<dict>
-            <key>cell</key>             
+                        <key>cell</key>
+                        <string>PSSwitchCell</string>
+                        <key>defaults</key>
+                        <string>com.thomtl.spotweathersettings</string>
+                        <key>key</key>
+                        <string>enableconditionview</string>
+                        <key>label</key>
+                        <string>Enable Conditions Icon</string>
+                        <key>default</key>
+                        <true/>
+                        <key>PostNotification</key>
+                        <string>com.thomtl.spotweathersettings/preferences.changed</string>
+                </dict>
+	        <dict>
+                        <key>cell</key>
+                        <string>PSSwitchCell</string>
+                        <key>defaults</key>
+                        <string>com.thomtl.spotweathersettings</string>
+                        <key>key</key>
+                        <string>enableconditionlabel</string>
+                        <key>label</key>
+                        <string>Enable Conditions Label</string>
+                        <key>default</key>
+                        <false/>
+                        <key>PostNotification</key>
+                        <string>com.thomtl.spotweathersettings/preferences.changed</string>
+                </dict>
+                <dict>
+                        <key>cell</key>
+                        <string>PSSwitchCell</string>
+                        <key>defaults</key>
+                        <string>com.thomtl.spotweathersettings</string>
+                        <key>key</key>
+                        <string>enablelocationlabel</string>
+                        <key>label</key>
+                        <string>Enable Location Label</string>
+                        <key>default</key>
+                        <false/>
+                        <key>PostNotification</key>
+                        <string>com.thomtl.spotweathersettings/preferences.changed</string>
+                </dict>
+                <dict>
+                        <key>cell</key>
+                        <string>PSSwitchCell</string>
+                        <key>defaults</key>
+                        <string>com.thomtl.spotweathersettings</string>
+                        <key>key</key>
+                        <string>enabletemperaturelabel</string>
+                        <key>label</key>
+                        <string>Enable Temperature Label</string>
+                        <key>default</key>
+                        <true/>
+                        <key>PostNotification</key>
+                        <string>com.thomtl.spotweathersettings/preferences.changed</string>
+                </dict>
+                <dict>
+                        <key>cell</key>
+                        <string>PSGroupCell</string>
+                        <key>footerText</key>
+                        <string>Respring to apply changes.</string>
+                </dict>
+		<dict>
+            		<key>cell</key>             
 			<string>PSButtonCell</string>
-            <key>label</key>            
+            		<key>label</key>            
 			<string>Respring!</string>
-            <key>action</key>           
+            		<key>action</key>           
 			<string>respring</string>
 		</dict>
 	</array>
